--- a/package.json
+++ b/package.json
@@ -19,22 +19,23 @@
     "e2e": "playwright test"
   },
   "dependencies": {
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "imap": "^0.8.19"
   },
   "devDependencies": {
-    "@playwright/test": "^1.32.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@playwright/test": "^1.34.3",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^3.1.0",
-    "electron": "^23.2.0",
+    "electron": "^23.3.4",
     "electron-builder": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.60.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.1.4",
+    "sass": "^1.62.1",
+    "typescript": "^5.0.4",
+    "vite": "^4.1.5",
     "vite-plugin-electron": "^0.11.2",
-    "vite-plugin-electron-renderer": "^0.14.1"
+    "vite-plugin-electron-renderer": "^0.14.5"
   },
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
