--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@apollo/client": "^3.7.14",
     "electron-updater": "^5.3.0",
     "graphql": "^16.6.0",
-    "imap": "^0.8.19"
+    "imap": "^0.8.19",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.34.3",
