--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "antd": "^5.5.2",
     "electron-updater": "^5.3.0",
     "graphql": "^16.6.0",
     "imap": "^0.8.19",
+    "imapflow": "^1.0.128",
+    "mailparser": "^3.6.4",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.34.3",
+    "@types/imap": "^0.8.37",
+    "@types/imapflow": "^1.0.13",
+    "@types/mailparser": "^3.4.0",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^3.1.0",
