--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "imap": "^0.8.19",
     "imapflow": "^1.0.128",
     "mailparser": "^3.6.4",
+    "nodemailer": "^6.9.3",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/imap": "^0.8.37",
     "@types/imapflow": "^1.0.13",
     "@types/mailparser": "^3.4.0",
+    "@types/nodemailer": "^6.4.8",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^3.1.0",
