--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "e2e": "playwright test",
     "start": "electron-forge start",
     "package": "vite build && electron-forge package",
-    "make": "vite build && electron-forge make"
+    "make": "vite build && electron-forge make",
+    "publish-mac": "vite build && electron-forge publish"
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
@@ -40,6 +41,7 @@
     "@electron-forge/maker-rpm": "^6.1.1",
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
+    "@electron-forge/publisher-github": "^6.1.1",
     "@playwright/test": "^1.34.3",
     "@types/imap": "^0.8.37",
     "@types/imapflow": "^1.0.13",
