--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,40 +42,34 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           npm run make
-        env:
-          GH_TOKEN: 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
       
       - name: build mac app
         if: matrix.os == 'macos-latest'
         run: |
           npm run make
-        env:
-          GH_TOKEN: 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
 
         # step5: cleanup artifacts in out
       - name: cleanup artifacts
         if: matrix.os == 'macos-latest'
         run: |
-          npx rimraf "out/!(*.dmg)"
+          npx rimraf "out/make/!(*.dmg)"
 
         # step5: cleanup artifacts in out
       - name: cleanup artifacts
         if: matrix.os == 'windows-latest'
         run: |
-          npx rimraf "out/!(*.exe)"
+          npx rimraf "out/make/!(*.exe)"
 
         # step6: upload artifacts
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}
-          path: out
+          path: out/make
 
           # step7: create release
       - name: release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "out/**"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          files: "out/make/**"
