--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,34 +42,23 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           npm run make
-      
+
       - name: build mac app
         if: matrix.os == 'macos-latest'
         run: |
           npm run make
-
-        # step5: cleanup artifacts in out
-      - name: cleanup artifacts
-        if: matrix.os == 'macos-latest'
-        run: |
-          npx rimraf "out/make/!(*.dmg)"
-
-        # step5: cleanup artifacts in out
-      - name: cleanup artifacts
-        if: matrix.os == 'windows-latest'
-        run: |
-          npx rimraf "out/make/!(*.exe)"
 
         # step6: upload artifacts
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}
-          path: out/make
+          path: out/make/
 
-          # step7: create release
+        # step7: create release
       - name: release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: "out/make/**"
+          token: ${{ secrets.GITHUB_TOKEN }}
