--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,18 +35,18 @@ jobs:
          # step3: npm install
       - name: npm install
         run: |
-          npm install
+          yarn
 
         # step4: build app for mac/win
       - name: build windows app
         if: matrix.os == 'windows-latest'
         run: |
-          npm run make
+          yarn make
 
       - name: build mac app
         if: matrix.os == 'macos-latest'
         run: |
-          npm run make
+          yarn make
 
         # step6: upload artifacts
       - name: upload artifacts
@@ -61,4 +61,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: "out/make/**"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.RELEASE_TOKEN }}
