--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "electron-forge start",
     "package": "vite build && electron-forge package",
     "make": "vite build && electron-forge make",
-    "publish-mac": "vite build && electron-forge publish"
+    "make-mac-x64": "vite build && electron-forge make --platform=darwin --arch=x64"
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
