--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "e2e": "playwright test",
     "start": "electron-forge start",
     "package": "vite build && electron-forge package",
-    "make": "vite build && electron-forge make",
+    "make-mac-arm64": "vite build && electron-forge make --platform=darwin --arch=arm64",
     "make-mac-x64": "vite build && electron-forge make --platform=darwin --arch=x64"
   },
   "dependencies": {
